<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title">Original title:</string>
    <string name="overview">plot synopsis:</string>
    <string name="rating">User rating:</string>
    <string name="date">Release date:</string>
    <string name="pref_key">key</string>
    <string name="pref_label">Sort Movies by</string>
    <string name="pref_popular" translatable="false">Popular Movies</string>
    <string name="pref_top" translatable="false">Top rated Movies</string>
    <string name="pref_favourite" translatable="false">Favourites Movies</string>
    <string name="pref_favourite_val">Favourites Movies</string>
    <string name="pref_popular_val">Popular Movies</string>
    <string name="pref_top_val">Top rated Movies</string>
    <string name="image_desc">Movie poster</string>
    <string name="progress_message">Loading</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>

</resources>
